# mavlink-camera-manager

./: Cargo.toml  README.md  build.rs
.github/: release-drafter-template.yml
.github/workflows/: linux-arm-rtsp.yml  release-drafter.yml  rust.yml  security-audit.yml  test_pipelines.yml
src/: main.rs
src/cli/: manager.rs
src/custom/: bluerov.rs
src/helper/: develop.rs  mod.rs  tokio_backtrace.rs
src/html/: index.html
src/lib/stream/sink/: webrtc_sink.rs
src/lib/stream/webrtc/frontend/: package-lock.json  package.json
src/logger/: manager.rs
src/mavlink/: mavlink_camera.rs
src/network/: utils.rs
src/server/: manager.rs  pages.rs
src/settings/: manager.rs
src/stream/: manager.rs  mod.rs  rtsp_server.rs  stream.rs  stream_backend.rs  types.rs  video_stream_custom_pipeline.rs
src/stream/gst/: pipeline_builder.rs  pipeline_runner.rs  utils.rs
src/stream/pipeline/: fake_pipeline.rs  mod.rs  pipeline.rs  qr_pipeline.rs  redirect_pipeline.rs  runner.rs  v4l_pipeline.rs
src/stream/rtsp/: rtsp_server.rs
src/stream/sink/: image_sink.rs  rtsp_sink.rs  udp_sink.rs  webrtc_sink.rs
src/stream/webrtc/: mod.rs  signaller.rs  signalling_protocol.rs  signalling_server.rs  turn_server.rs
src/stream/webrtc/frontend/: package-lock.json  package.json
src/stream/webrtc/frontend/src/: App.vue  manager.ts
src/stream/webrtc/frontend/src/webrtc/: App.vue  consumer.ts  main.ts  manager.ts  session.ts
src/video/: mod.rs  types.rs  video_source.rs  video_source_custom_pipeline.rs  video_source_gst.rs  video_source_local.rs  xml.rs
src/video_stream/: types.rs
