[package]
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
description = "Mavlink Camera Manager"
edition = "2021"
license = "MIT"
name = "mavlink-camera-manager"
version = "0.2.4"

documentation = "https://github.com/patrickelectric/mavlink-camera-manager"
homepage = "https://github.com/patrickelectric/mavlink-camera-manager"
readme = "README.md"
repository = "https://github.com/patrickelectric/mavlink-camera-manager"

default-run = "mavlink-camera-manager"
path = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
name = "mavlink-camera-manager"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.9.5"

#TODO: Investigate rweb to use openapi spec for free
# https://github.com/kdy1/rweb
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-web-validator = "5.0.1"
actix-service = "2.0.2"
actix-extensible-rate-limit = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }

## FINAL
sysinfo = "0.29"
chrono = "0.4.31"
lazy_static = "1.4.0"
include_dir = "0.7.3"
paperclip = { version = "0.8", features = ["paperclip-actix", "actix4",  "swagger-ui", "url", "uuid"] }
#TODO: Replace it with yaserde
quick-xml = { version = "0.30.0", features = ["serialize"] }
url = { version = "2.4.1", features = ["serde"] }
v4l = "0.14.0"
directories = "5.0.1"
pnet = { version = "0.34.0", features = ["std"] }
semver = "1.0"
thirtyfour = "0.31"
tracing = { version = "0.1.37", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-log = "0.1.3"
tracing-actix-web = "0.7.6"
tracing-gstreamer = "0.6.0"
tracing-tracy = { version = "0.10.4", features = ["ondemand", "broadcast"] } # Note that these features defines the tracy client behavior.

# This is a custom revision adding file name suffix on top of tracing-appender-0.2.2" "0.2.2", but compatible with the current tracing version.
# Reference: https://github.com/tokio-rs/tracing/issues/2441
tracing-appender = { git = "https://github.com/joaoantoniocardoso/tracing", branch = "tracing-appender-0.2.2-with-filename-suffix" }

anyhow = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "time"] }
enum_dispatch = "0.3.12"
uuid = { version = "0.8", features = ["v4", "serde"] }
ts-rs = "7.0"
cached = { version = "0.45", features = ["serde", "serde_json", "async_tokio_rt_multi_thread"] }

## Mavlink
mavlink = { version = "0.10.6", features = ["default", "emit-extensions"] }

thiserror = "1"
tokio-tungstenite = { version = "0.20" }
tokio-native-tls = "0.3.0"
tokio-stream = "0.1"
async-tungstenite = { version = "0.24", features = ["tokio-runtime", "tokio-native-tls"] }
async-std = { version = "1.12", features =  ["tokio1"] }
futures = "0.3"
webrtc-util = { version = "0.8", default-features = false, features = ["vnet"] }
turn = "0.7"

## Image/Thumbnail
image = "0.24"

## GSTREAMER
gst = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", version = "0.22", package = "gstreamer", features = ["v1_16"] }
gst-app = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", version = "0.22", package = "gstreamer-app", features = ["v1_16"] }
gst-sdp = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", version = "0.22", package = "gstreamer-sdp", features = ["v1_16"] }
gst-webrtc = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", version = "0.22", package = "gstreamer-webrtc", features = ["v1_16"] }
gst-rtsp = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", version = "0.22", package = "gstreamer-rtsp", features = ["v1_16"] }
gst-rtsp-server = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", version = "0.22", package = "gstreamer-rtsp-server", features = ["v1_16"] }
gst-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", version = "0.22", package = "gstreamer-video", features = ["v1_16"] }
gstrswebrtc = { git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs", version = "0.12.0-alpha.1", package = "gst-plugin-webrtc" }
gstrswebrtc-signalling = { git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs", version = "0.12.0-alpha.1", package = "gst-plugin-webrtc-signalling"}

webrtc-sdp = "0.3.10"
memchr = "^2.7.1"

[dev-dependencies]
rand = "0.8.5"
serial_test = "0.10"
tracing-test = "0.2"

[build-dependencies]
reqwest = { version = "0.11.20", features = ["blocking"] }
vergen = { version = "7.5", default-features = false, features = ["build", "git"] }
ts-rs = "7.0"
uuid = { version = "0.8", features = ["v4", "serde"] }  # 0.8 because paperclip's "uuid" feature requires this vesion
serde = { version = "1.0", features = ["derive"] }
regex = "1"
